--- a/.github/workflows/repo_sync_sync.yml
+++ b/.github/workflows/repo_sync_sync.yml
@@ -7,7 +7,7 @@ on:
   watch:
     types: started
   repository_dispatch:
-    types: sync-Sunert-scripts
+    types: sync-GoodHolidays-Scripts
 jobs:
   repo-sync:
     env:
@@ -20,11 +20,11 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: sync Sunert-scripts
+      - name: sync GoodHolidays-Scripts
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/Sunert/Scripts.git"
+          source_repo: "https://github.com/GoodHolidays/Scripts.git"
           source_branch: "master"
           destination_branch: "master"
           github_token: ${{ secrets.PAT }}
